tests/negative/assign_string_to_char.tx
// EXPECTED: COMPILE_ERROR
// Description: String can not be assigned to char type
function main() {
    let a: char = "hello";
    print(a);
}
